# scale_with_esp_idf

./: .clang-format  .gitignore  .gitmodules  README.md  mkdocs.yml
features/monitor/: CMakeLists.txt  Kconfig.in  monitoring.c  monitoring.h
features/ota/: CMakeLists.txt  Kconfig.in  ota_fw.c
features/ota/esp32/: ota_fw_impl.c
features/sensor/: CMakeLists.txt  Kconfig.in
features/sensor/atlas_ec/: atlas_ec_params.h
features/sensor/atlas_ph/: atlas_ph.c  atlas_ph.h  atlas_ph_params.h
features/sensor/scd4x/: scd4x.c
features/sensor/sht3x/: sht3x.h  sht3x_params.h
features/sensor/th01/: Kconfig.in  th01.c  th01.h
features/sensor/winsen_zce04b/: Kconfig.in  winsen_zce04b.c  winsen_zce04b.h
features/sensor/winsen_ze03/: Kconfig.in  winsen_ze03.c  winsen_ze03.h
features/setup/: CMakeLists.txt  Kconfig.in  easy_setup.c  easy_setup.h  ethernet_easy_setup.c  linker.lf  mdns.c
features/touch_lcd/: CMakeLists.txt  Kconfig.in  idf_component.yml  lcd_panel_rgb_gt911.c  lcd_panel_rgb_gt911.h
features/usbhost/: CMakeLists.txt  Kconfig.in  idf_component.yml  msc.c  msc.h
package/async_mqtt/: AsyncMqttClient.cpp  AsyncMqttClient.h  AsyncMqttClient.hpp  AsyncTCP.cpp  AsyncTCP.h  CMakeLists.txt  IPAddress.cpp  IPAddress.hpp  Kconfig.in  component.mk
package/async_mqtt/mqttlib/: Helpers.hpp
package/async_mqtt/mqttlib/Packets/: ConnAckPacket.hpp  Packet.hpp  PingRespPacket.hpp  PubAckPacket.hpp  PubCompPacket.hpp  PubRecPacket.hpp  PubRelPacket.hpp  PublishPacket.hpp  SubAckPacket.hpp  UnsubAckPacket.hpp
package/ethernet/: CMakeLists.txt  Kconfig.in  ethernet_manager.c  ethernet_manager.h
package/ethernet/esp32/: ethernet_manager_impl.c  ethernet_manager_impl.h
package/lwmqttc/: CMakeLists.txt  Kconfig.in  esp_mqtt.c  esp_tls_lwmqtt.c  lwmqttc.c  lwmqttc.h  mqttc.c  mqttc.h  tls_lwmqttc.c  tls_lwmqttc.h
package/lwmqttc/test/main/: main.c
package/modbus/: CMakeLists.txt  Kconfig.in  mb_master_private.h  mb_master_rtu.c  mb_master_rtu.h
package/modbus/esp32/: mb_master_impl.c  mb_master_impl.h
package/mqttc/: CMakeLists.txt  Kconfig  Kconfig.in  component.mk  mqtt.c  mqtt.h
package/mqttc/esp32/: mqtt_impl.c  mqtt_impl.h
package/mqttc/test/: mqtt_client.c
package/pal/: CMakeLists.txt  Kconfig.in
package/pal/adc/: adc_api.c  adc_api.h
package/pal/adc/esp32/: adc_hal.c  adc_hal.h
package/pal/dac/: dac_api.c  dac_api.h
package/pal/dac/esp32/: dac_hal.c  dac_hal.h
package/pal/gpio/: gpio_api.c  gpio_api.h
package/pal/gpio/esp32/: gpio_hal.c  gpio_hal.h
package/pal/i2c/: i2c_api.c  i2c_api.h
package/pal/i2c/esp32/: i2c_hal.c  i2c_hal.h
package/pal/uart/: uart_api.c  uart_api.h
package/pal/uart/esp32/: uart_hal.c  uart_hal.h  uart_pal.c  uart_pal.h
package/ping/: CMakeLists.txt  Kconfig  Kconfig.in  component.mk  icmp_echo_api.c  icmp_echo_api.h  icmp_echo_cmd.c  icmp_echo_cmd.h  linker.lf
package/ping/esp32/: const.h  icmp_echo_impl.c  icmp_echo_impl.h  lwip_ping_impl.c  lwip_ping_impl.h
package/rtc/: CMakeLists.txt  Kconfig.in
package/rtc/ds3231/: ds3231.c  ds3231.h  ds3231_params.h
package/sensor/: CMakeLists.txt  Kconfig  Kconfig.in
package/sensor/atlas_ec/: atlas_ec.c  atlas_ec.h
package/sensor/atlas_ph/: atlas_ph.c  atlas_ph.h
package/sensor/battery/: battery.c  battery.h
package/sensor/scd4x/: scd4x.c  scd4x.h  scd4x_params.h
package/sensor/sht3x/: sht3x.c  sht3x.h  sht3x_params.h
package/setup/: CMakeLists.txt  Kconfig.in  easy_setup.c  easy_setup.h  ethernet_easy_setup.c  mdns.c
package/shell/: CMakeLists.txt  Kconfig.in  shell_console.c  shell_console.h
package/shell/esp32/: shell_command_impl.c  shell_command_impl.h  shell_console_impl.c  shell_console_impl.h  shell_console_impl_priv.h
package/syscfg/: CMakeLists.txt  Kconfig  Kconfig.in  component.mk  linker.lf  sys_config.c  sys_config.h  syscfg.c  syscfg.h  syscfg_cmd.c  syscfg_cmd.h
package/syscfg/esp32/: syscfg_impl.c  syscfg_impl.h
package/syscfg/test/: CMakeLists.txt  test_syscfg.c
package/sysevent/: CMakeLists.txt  Kconfig  Kconfig.in  event_ids.h  linker.lf  sys_status.c  sys_status.h  sysevent.c  sysevent.h
package/sysevent/esp32/: sysevent_impl.c  sysevent_impl.h
package/sysfile/: CMakeLists.txt  Kconfig.in  sysfile.c  sysfile.h
package/sysfile/esp32/: littlefs_impl.c  littlefs_impl.h  spiffs_impl.c  spiffs_impl.h
package/time/: CMakeLists.txt  Kconfig  Kconfig.in  time_api.c  time_api.h  uptime.c
package/wifi/: CMakeLists.txt  Kconfig.in  linker.lf  wifi_manager.c  wifi_manager.h  wifi_manager_private.h
package/wifi/esp32/: wifi_manager_impl.c  wifi_manager_impl.h
package/wifi/test/: CMakeLists.txt  test_wifi.c
product/data_logger/main/: CMakeLists.txt  Kconfig.projbuild  adc.c  battery_task.c  config.h  file_copy.c  file_copy.h  led_strip_rmt_sk68xx.c  led_task.c  main.c  main.cpp  main.h  rtc_task.c  rtc_task.h  sd_card.c  sensor_task.c  usb_msc_task.c
product/irrigation/child/main/: CMakeLists.txt  Kconfig.projbuild  actuator.c  actuator.h  adc.c  battery_task.h  config.h  control_task.c  func_key.c  idf_component.yml  led_task.c  main.cpp  main.h
product/irrigation/hid/main/: CMakeLists.txt  Kconfig.projbuild  adc.c  command.c  command.h  config.h  control_task.c  file_manager.c  file_manager.h  gui.cpp  gui.h  hid_config.c  hid_config.h  idf_component.yml  main.c  main.cpp  main.h  rtc_task.c  sd_card.c  sdcard.h  sensor_task.c  ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h
product/irrigation/master/main/: CMakeLists.txt  Kconfig.projbuild  actuator.c  actuator.h  actuator_task.c  adc.h  battery_task.c  config.h  control_task.c  func_key.c  idf_component.yml  input_task.c  main.cpp  main.h  modbus_sensor.c  mqtt_task.c  mqtt_task.cpp  mqtt_task.h  sensor_task.c  sensor_task.h  water_flow.c
product/measurement_system/Judge_control/main/: CMakeLists.txt  Kconfig.projbuild  LIFO_stack.c  LIFO_stack.h  command.h  config.h  control_task.c  control_task.h  file_manager.c  file_manager.h  gui.h  hid_config.h  i2s_speaker.c  i2s_speaker.h  idf_component.yml  main.cpp  main.h  model_define.c  model_define.h  (+14 more)
(+320 files in other folders)
